--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/express": "^4.17.21",
     "@types/pg": "^8.6.1",
     "axios": "^1.6.0",
+    "body-parser": "^1.20.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
@@ -73,6 +74,7 @@
     "@nx/js": "18.0.7",
     "@nx/nest": "^18.0.7",
     "@nx/node": "18.0.7",
+    "@nx/vite": "20.2.1",
     "@nx/web": "18.0.7",
     "@nx/webpack": "18.0.7",
     "@nx/workspace": "18.0.7",
@@ -91,14 +93,13 @@
     "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~13.1.4",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "20.2.2",
+    "nx": "20.3.0",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.3.2",
     "webpack": "^5.94.0",
-    "webpack-cli": "^5.1.4",
-    "@nx/vite": "20.2.1"
+    "webpack-cli": "^5.1.4"
   },
   "nx": {}
 }
